syntax = "proto3";
package services;

option go_package = "github.com/tosccony/proto_example/services_protos";

service MyService {
  rpc GetMenu(MenuRequest) returns (stream Menu) {}
  rpc PlaceOrder(Order) returns (Receipt) {}
  rpc GetOrderStatus(Receipt) returns (OrderStatus) {}
}

message MenuRequest {}

message Order {
  repeated Item items = 1;
}

message Receipt {
  string id = 1;
}

message OrderStatus {
  string orderId = 1;
  string status = 2;
}

message Menu {
  repeated  Item items = 1;
}

message Item {
  string id = 1;
  string name = 2;
}